name:                golomb-rice
version:             0.1.0.0
synopsis:            Golomb-rice encoding for bytestrings and bit streams.
description:         See README.md
category:            Data
build-type:          Simple
cabal-version:       >=2.0
license:             MIT
license-file:        LICENSE
copyright:           2019 ATUM SOLUTIONS AG
author:              Anton Gushcha, Aminion, Vladimir Krutkin, Levon Oganyan, Sergey Ivanov
maintainer:          Anton Gushcha <ncrashed@protonmail.com>

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Encoding.GolombRice
    Data.Encoding.GolombRice.Strict
    Data.Encoding.GolombRice.Strict.Internal
  default-language:    Haskell2010
  build-depends:
      base            >= 4.7 && < 4.13
    , bitstream       >= 0.3 && < 0.4
    , bytestring      >= 0.9 && < 0.11
  default-extensions:
    DeriveGeneric
    DeriveAnyClass
    OverloadedStrings
    TemplateHaskell

test-suite golomb-rice-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Driver.hs
  hs-source-dirs:      test
  other-modules:
      Data.Encoding.GolombRiceTest
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  default-extensions:
    NumDecimals
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
  build-depends:
      base
    , golomb-rice
    , tasty
    , tasty-discover
    , tasty-hspec
    , bytestring
