name:                golomb-rice
version:             0.2.0.0
synopsis:            Golomb-rice encoding for bytestrings and bit streams.
description:         See README.md
category:            Data
build-type:          Simple
cabal-version:       >=2.0
license:             MIT
license-file:        LICENSE
copyright:           2019 ATUM SOLUTIONS AG
author:              Anton Gushcha, Aminion, Vladimir Krutkin, Levon Oganyan, Sergey Ivanov
maintainer:          Anton Gushcha <ncrashed@protonmail.com>
extra-source-files:  CHANGELOG.md

flag cbitstream
  description: Use pure C implementation for bitstreams.
  default: True
  manual: True

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Encoding.GolombRice
    Data.Encoding.GolombRice.Item
    Data.Encoding.GolombRice.Strict
    Data.Encoding.GolombRice.Strict.Internal
  default-language:    Haskell2010
  build-depends:
      base            >= 4.7 && < 4.13
    , bitstream       >= 0.3 && < 0.4
    , bytestring      >= 0.9 && < 0.11
    , deepseq         >= 1.4
    , safe            >= 0.3 && < 0.4
    , vector          >= 0.12
  if flag(cbitstream)
    exposed-modules:
      Data.Encoding.GolombRice.Strict.Mutable
      Data.Encoding.GolombRice.Strict.Mutable.Internal
    build-depends: cbitstream >= 0.1 && < 0.2
  default-extensions:
    CPP
    DeriveAnyClass
    DeriveGeneric
    FlexibleContexts
    OverloadedStrings
    ScopedTypeVariables
    TemplateHaskell

test-suite golomb-rice-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Driver.hs
  hs-source-dirs:      test
  other-modules:
      Data.Encoding.GolombRiceTest
      Data.Encoding.Mutable.GolombRiceTest
  if flag(cbitstream)
    cpp-options: -DCBITSTREAM
    build-depends: cbitstream >= 0.1 && < 0.2
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  default-extensions:
    NumDecimals
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
  build-depends:
      base
    , bitstream
    , bytestring
    , golomb-rice
    , quickcheck-instances
    , tasty
    , tasty-discover
    , tasty-hspec
    , tasty-quickcheck
    , vector
