name:                haskell-ergo-api
version:             0.1.0.0
synopsis:            Provides access to the API of Ergo node
description:         See README.md
category:            Cryptocurrency
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE
copyright:           2019 ATUM SOLUTIONS AG
author:              Anton Gushcha, Aminion, Vladimir Krutkin, Levon Oganyan
maintainer:          Anton Gushcha <ncrashed@protonmail.com>, Vladimir Krutkin <krutkinvs@gmail.com>

library
  hs-source-dirs:      src
  exposed-modules:
    Network.Ergo.Api.Client
  build-depends:
   base >= 4.7 && < 4.13

  default-language:    Haskell2010
  default-extensions: