name:                haskell-ergo-api
version:             0.1.0.0
synopsis:            Provides access to the API of Ergo node
description:         See README.md
category:            Cryptocurrency
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE
copyright:           2019 ATUM SOLUTIONS AG
author:              Anton Gushcha, Aminion, Vladimir Krutkin, Levon Oganyan
maintainer:          Anton Gushcha <ncrashed@protonmail.com>, Vladimir Krutkin <krutkinvs@gmail.com>

library
  hs-source-dirs:      src
  exposed-modules:
    Network.Ergo.Api.Client
    Network.Ergo.Api.Internal
  build-depends:
      base                 >= 4.7 && < 4.13
    , aeson                == 1.4.*
    , bytestring           == 0.10.*
    , exceptions           == 0.10.*
    , http-client          == 0.6.*
    , lens                 == 4.17.*
    , text                 == 1.2.*
    , unordered-containers == 0.2.*
    , wreq                 == 0.5.*
    , ergvein-interface-ergo

  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings