name:                ergvein-index-api
version:             0.1.0.0
synopsis:            Shared api contract for ergvein wallet cryptocurrencies index server
description:         See README.md
category:            Cryptocurrency
build-type:          Simple
cabal-version:       >=1.10

library
  Ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:
      Ergvein.Index.API
      Ergvein.Index.API.V1
      Ergvein.Index.API.Models
  build-depends:
        base
      , aeson
      , bytestring
      , directory
      , lens
      , template-haskell
      , text     
      , servant                   >= 0.14 && < 0.15
      , ergvein-common

  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators