name:                ergvein-index-api
version:             0.1.0.0
synopsis:            Shared api contract for ergvein wallet cryptocurrencies index server
description:         See README.md
category:            Cryptocurrency
build-type:          Simple
cabal-version:       >=1.10

library
  Ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:
      Ergvein.Index.API
      Ergvein.Index.API.Types
      Ergvein.Index.API.V1

  build-depends:
        base                 >= 4.7  && < 4.13
      , containers           >= 0.6  && < 0.7
      , servant              >= 0.16 && < 0.17
      , servant-client-core  >= 0.16 && < 0.17
      , text                 >= 1.2  && < 1.3
      , vector
      , bytestring
      , ergvein-common
      , ergvein-wallet-types

  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
