name:                ergvein-index-client
version:             0.1.0.0
synopsis:            Client for Ergvein wallet cryptocurrencies indexer
description:         See README.md
category:            Cryptocurrency
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE
copyright:           2019 ATUM SOLUTIONS AG
author:              Levon Oganyan
maintainer:          Levon Oganyan <lemarwin@protonmail.com>

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:
    Ergvein.Index.Client
    Ergvein.Index.Client.V1
  build-depends:
        base                    >= 4.7    && < 4.13
      , text                    >= 1.2    && < 1.3
      , servant                 >= 0.16   && < 0.17
      , servant-client          >= 0.16   && < 0.17
      , http-client             >= 0.5    && < 0.7
      , mtl                     >= 2.1    && < 2.3
      , ergvein-common
      , ergvein-index-api
      , ergvein-types
      , sepulcas-native
  default-language:    Haskell2010
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    QuasiQuotes
    UndecidableInstances
