name:                ergvein-index-protocol
version:             0.1.0.1
synopsis:            Shared api contract for ergvein wallet cryptocurrencies index server
description:         See README.md
category:            Cryptocurrency
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:
    Ergvein.Index.Protocol.Types
    Ergvein.Index.Protocol.Serialization
    Ergvein.Index.Protocol.Deserialization
    Ergvein.Index.Protocol.Utils

  build-depends:
      base                 >= 4.7  && < 4.13
    , attoparsec           >= 0.13 && < 0.14
    , attoparsec-binary    >= 0.2  && < 0.3
    , bytestring           >= 0.10 && < 0.11
    , conversion           >= 1.2  && < 1.3
    , containers           >= 0.6  && < 0.7
    , network              >= 2.8  && < 2.9
    , scientific           >= 0.3  && < 0.4
    , template-haskell     >= 2.14 && < 2.15
    , time                 >= 1.8  && < 1.9
    , vector               >= 0.12 && < 0.13
    , vector-th-unbox      >= 0.2  && < 0.3
    , zlib                 >= 0.6  && < 0.7
    , bitstream            >= 0.3  && < 0.4
    , ergvein-wallet-types
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    DeriveAnyClass
    MultiParamTypeClasses

test-suite ergvein-index-protocol-test
  type: exitcode-stdio-1.0
  Default-language: Haskell2010
  hs-source-dirs: tests
  main-is: Driver.hs
  other-modules:
    ProtocolTest
    ProtocolTest.Generators
    VersionTest
  build-depends:
      base
    , attoparsec
    , bytestring
    , containers           >= 0.6  && < 0.7
    , ergvein-index-protocol
    , ergvein-wallet-types
    , tasty
    , tasty-discover
    , tasty-hspec
    , tasty-hunit
    , tasty-quickcheck
    , QuickCheck
    , quickcheck-instances
    , vector
  default-extensions:
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
